--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<modules>
 		<module>crse</module>
 		<module>crsi</module>
-		<module>commons</module>
+		<module>common</module>
 	</modules>
 
 	<dependencyManagement>
@@ -87,15 +87,5 @@
 		</dependency>
 	</dependencies>
 	</dependencyManagement>
-
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
