--- a/common/pom.xml
+++ b/common/pom.xml
@@ -36,6 +36,12 @@
             <version>1.7.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.3.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
