--- a/crse/src/main/resources/application.properties
+++ b/crse/src/main/resources/application.properties
@@ -57,7 +57,7 @@ spring.datasource.filters=stat,wall,log4j
 spring.datasource.logSlowSql=true
 
 
-mybatis-plus.mapper-locations=classpath:/mybatis/*.xml
+mybatis-plus.mapper-locations=classpath:/myBatis/*.xml
 mybatis-plus.type-aliases-package= com.kzkj.pojo.po
 mybatis-plus.global-config.id-type=0
 mybatis-plus.global-config.field-strategy=2
