--- a/crse/src/main/resources/application.properties
+++ b/crse/src/main/resources/application.properties
@@ -69,3 +69,7 @@ mybatis-plus.global-config.configuration.map-underscore-to-camel-case=true
 mybatis-plus.global-config.configuration.cache-enabled=false
 
 logging.config=classpath:logback-spring.xml
+xmlvalidate.path.crse=C:/Users/32723/Desktop/check/crse.xsd
+xmlvalidate.path.crsi=C:/Users/32723/Desktop/check/crsi.xsd
+xmlvalidate.path.transfer=C:/Users/32723/Desktop/check/transfer.xsd
+xmlvalidate.path.terminal=C:/Users/32723/Desktop/check/terminal.xsd
