--- a/crse/src/main/resources/application.properties
+++ b/crse/src/main/resources/application.properties
@@ -1,24 +1,41 @@
 
 server.port=8080
 
-spring.rabbitmq.address = 127.0.0.1:5672
+#spring.rabbitmq.address = 127.0.0.1:5672
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username = root
+#spring.rabbitmq.password = root
+#spring.rabbitmq.Vhost = /
+#spring.rabbitmq.prefetchCount = 5
+#spring.rabbitmq.concurrentConsumers = 10
+#spring.rabbitmq.maxConcurrency = 20
+
+#spring.rabbitmq.address = 47.99.211.91:5672
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username = root
+#spring.rabbitmq.password = yjt
+#spring.rabbitmq.Vhost = sign
+#spring.rabbitmq.prefetchCount = 5
+#spring.rabbitmq.concurrentConsumers = 10
+#spring.rabbitmq.maxConcurrency = 20
+
+#spring.rabbitmq.address = 47.99.211.91:5672
+##spring.rabbitmq.port=5672
+##spring.rabbitmq.username = sunzj
+##spring.rabbitmq.password = sunzj123
+##spring.rabbitmq.Vhost = crse
+##spring.rabbitmq.prefetchCount = 5
+##spring.rabbitmq.concurrentConsumers = 10
+##spring.rabbitmq.maxConcurrency = 20
+
+spring.rabbitmq.address = 47.99.211.91:5672
 spring.rabbitmq.port=5672
-spring.rabbitmq.username = root
-spring.rabbitmq.password = root
-spring.rabbitmq.Vhost = /
+spring.rabbitmq.username = yujt
+spring.rabbitmq.password = yjt123
+spring.rabbitmq.Vhost = crse
 spring.rabbitmq.prefetchCount = 5
 spring.rabbitmq.concurrentConsumers = 10
 spring.rabbitmq.maxConcurrency = 20
-
-#spring.rabbitmq.host=47.96.1.96
-#spring.rabbitmq.port=5672
-#spring.rabbitmq.username=kzkj
-#spring.rabbitmq.password=kzkj
-#spring.rabbitmq.prefetchCount=1
-#spring.rabbitmq.concurrentConsumers=1
-#spring.rabbitmq.maxConcurrency=1
-##MQ\u914D\u7F6E\u4FE1\u606F
-#spring.rabbitmq.virtualHost=crs_e
 
 spring.datasource.name=crs_e
 spring.datasource.url=jdbc:mysql://rm-wz99d8w08riysv1mjfo.mysql.rds.aliyuncs.com:3306/crs?useUnicode=true&characterEncoding=utf8
