--- a/crsi/src/main/resources/application.properties
+++ b/crsi/src/main/resources/application.properties
@@ -1,1 +1,74 @@
 
+server.port=8081
+
+#spring.rabbitmq.address = 127.0.0.1:5672
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username = root
+#spring.rabbitmq.password = root
+#spring.rabbitmq.Vhost = /
+#spring.rabbitmq.prefetchCount = 5
+#spring.rabbitmq.concurrentConsumers = 10
+#spring.rabbitmq.maxConcurrency = 20
+
+spring.rabbitmq.address = 47.99.211.91:5672
+spring.rabbitmq.port=5672
+spring.rabbitmq.username = root
+spring.rabbitmq.password = yjt123
+spring.rabbitmq.Vhost = crsi
+spring.rabbitmq.prefetchCount = 5
+spring.rabbitmq.concurrentConsumers = 10
+spring.rabbitmq.maxConcurrency = 20
+
+spring.datasource.name=crs_e
+spring.datasource.url=jdbc:mysql://rm-wz99d8w08riysv1mjfo.mysql.rds.aliyuncs.com:3306/crs?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=fcl
+spring.datasource.password=123456fcl&
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# \u521D\u59CB\u5316\u5927\u5C0F\uFF0C\u6700\u5C0F\uFF0C\u6700\u5927
+spring.datasource.initialSize=5
+spring.datasource.minIdle=5
+spring.datasource.maxActive=20
+# \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
+spring.datasource.maxWait=60000
+#\u662F\u5426\u7F13\u5B58preparedStatement\uFF0C\u4E5F\u5C31\u662FPSCache\u3002
+#PSCache\u5BF9\u652F\u6301\u6E38\u6807\u7684\u6570\u636E\u5E93\u6027\u80FD\u63D0\u5347\u5DE8\u5927\uFF0C\u6BD4\u5982\u8BF4oracle\u3002\u5728mysql\u4E0B\u5EFA\u8BAE\u5173\u95ED\u3002
+spring.datasource.poolPreparedStatements=false
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+#\u8981\u542F\u7528PSCache\uFF0C\u5FC5\u987B\u914D\u7F6E\u5927\u4E8E0\uFF0C\u5F53\u5927\u4E8E0\u65F6\uFF0CpoolPreparedStatements\u81EA\u52A8\u89E6\u53D1\u4FEE\u6539\u4E3Atrue\u3002
+#\u5728spring.datasource\u4E2D\uFF0C\u4E0D\u4F1A\u5B58\u5728Oracle\u4E0BPSCache\u5360\u7528\u5185\u5B58\u8FC7\u591A\u7684\u95EE\u9898\uFF0C\u53EF\u4EE5\u628A\u8FD9\u4E2A\u6570\u503C\u914D\u7F6E\u5927\u4E00\u4E9B\uFF0C\u6BD4\u5982\u8BF4100
+spring.datasource.maxOpenPreparedStatements=-1
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+#\u7533\u8BF7\u8FDE\u63A5\u65F6\u6267\u884CvalidationQuery\u68C0\u6D4B\u8FDE\u63A5\u662F\u5426\u6709\u6548\uFF0C\u505A\u4E86\u8FD9\u4E2A\u914D\u7F6E\u4F1A\u964D\u4F4E\u6027\u80FD\u3002
+spring.datasource.testOnBorrow=false
+#\u5EFA\u8BAE\u914D\u7F6E\u4E3Atrue\uFF0C\u4E0D\u5F71\u54CD\u6027\u80FD\uFF0C\u5E76\u4E14\u4FDD\u8BC1\u5B89\u5168\u6027\u3002
+#\u7533\u8BF7\u8FDE\u63A5\u7684\u65F6\u5019\u68C0\u6D4B\uFF0C\u5982\u679C\u7A7A\u95F2\u65F6\u95F4\u5927\u4E8EtimeBetweenEvictionRunsMillis\uFF0C\u6267\u884CvalidationQuery\u68C0\u6D4B\u8FDE\u63A5\u662F\u5426\u6709\u6548\u3002
+spring.datasource.testWhileIdle=true
+#\u5F52\u8FD8\u8FDE\u63A5\u65F6\u6267\u884CvalidationQuery\u68C0\u6D4B\u8FDE\u63A5\u662F\u5426\u6709\u6548\uFF0C\u505A\u4E86\u8FD9\u4E2A\u914D\u7F6E\u4F1A\u964D\u4F4E\u6027\u80FD
+spring.datasource.testOnReturn=false
+# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+# \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
+spring.datasource.minEvictableIdleTimeMillis=300000
+#\u7269\u7406\u8FDE\u63A5\u521D\u59CB\u5316\u7684\u65F6\u5019\u6267\u884C\u7684sql
+#connectionInitSqls
+# \u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters\uFF0C\u53BB\u6389\u540E\u76D1\u63A7\u754C\u9762sql\u65E0\u6CD5\u7EDF\u8BA1\uFF0C'wall'\u7528\u4E8E\u9632\u706B\u5899
+spring.datasource.filters=stat,wall,log4j
+spring.datasource.logSlowSql=true
+
+
+mybatis-plus.mapper-locations=classpath:/myBatis/*.xml
+mybatis-plus.type-aliases-package= com.kzkj.pojo.po
+mybatis-plus.global-config.id-type=0
+mybatis-plus.global-config.field-strategy=2
+mybatis-plus.global-config.db-column-underline=true
+mybatis-plus.global-config.refresh-mapper=true
+mybatis-plus.global-config.logic-delete-value=1
+mybatis-plus.global-config.logic-not-delete-value=0
+mybatis-plus.global-config.configuration.map-underscore-to-camel-case=true
+mybatis-plus.global-config.configuration.cache-enabled=false
+
+logging.config=classpath:logback-spring.xml
+xmlvalidate.path.crse=C:/Users/32723/Desktop/check/crse.xsd
+xmlvalidate.path.crsi=C:/Users/32723/Desktop/check/crsi.xsd
+xmlvalidate.path.transfer=C:/Users/32723/Desktop/check/transfer.xsd
+xmlvalidate.path.terminal=C:/Users/32723/Desktop/check/terminal.xsd
