--- a/crse/src/main/resources/application.properties
+++ b/crse/src/main/resources/application.properties
@@ -19,24 +19,23 @@ server.port=8081
 #spring.rabbitmq.concurrentConsumers = 10
 #spring.rabbitmq.maxConcurrency = 20
 
-spring.rabbitmq.address = 47.99.211.91:5672
+#spring.rabbitmq.address = 47.99.211.91:5672
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username = yujt
+#spring.rabbitmq.password = yjt123
+#spring.rabbitmq.Vhost = /
+#spring.rabbitmq.prefetchCount = 5
+#spring.rabbitmq.concurrentConsumers = 10
+#spring.rabbitmq.maxConcurrency = 20
+
+spring.rabbitmq.address = 192.168.0.123:5672
 spring.rabbitmq.port=5672
-spring.rabbitmq.username = yujt
-spring.rabbitmq.password = yjt123
+spring.rabbitmq.username = admin
+spring.rabbitmq.password = admin
 spring.rabbitmq.Vhost = /
 spring.rabbitmq.prefetchCount = 5
 spring.rabbitmq.concurrentConsumers = 10
 spring.rabbitmq.maxConcurrency = 20
-
-#spring.rabbitmq.address = 220.181.191.158:5671
-#spring.rabbitmq.address = rmqssl3.chinaport.gov.cn:5671
-#spring.rabbitmq.port=5671
-#spring.rabbitmq.username = U_SY3R010_SW214130Kzkj
-#spring.rabbitmq.password = rC85bT2185
-#spring.rabbitmq.Vhost = V_SWSY3R010
-#spring.rabbitmq.prefetchCount = 5
-#spring.rabbitmq.concurrentConsumers = 10
-#spring.rabbitmq.maxConcurrency = 20
 
 spring.datasource.name=crs_e
 spring.datasource.url=jdbc:mysql://rm-wz99d8w08riysv1mjfo.mysql.rds.aliyuncs.com:3306/crs?useUnicode=true&characterEncoding=utf8
